Fix deprecation warnings after update to Java 11