@@ -1,5 +1,6 @@
 /*
- * Copyright (c) 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2021 Oracle and/or its affiliates and others.
+ * All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0, which is available at
@@ -68,7 +69,7 @@ public class StaticRefTest {
 
     @Test
     public void testConstructor() {
-        assertEquals(new Integer(1001), elp.eval("Integer(1001)"));
+        assertEquals(Integer.valueOf(1001), elp.eval("Integer(1001)"));
     }
 
     @Test
